# crab-notifications

./: Cargo.toml  docker-compose.yml  readme.md
.cargo/: config.toml
src/: .env.example  config.rs  main.rs  tracing.rs
src/api/: errors.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/domain/: notification.rs
src/infra/: amqp.rs  consumer.rs  mod.rs
src/templates/email/: engine.rs  mod.rs  repository.rs  template.rs
src/workers/: email.rs
templates/: org1-created-account.json
