[package]
name = "notifications-service"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "2.1.0"
axum = "0.7.7"
chrono = "0.4.38"
once_cell = "1.20.2"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = {version = "0.6.1", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["v4"] }
validator = {version = "0.19.0", features = ["derive"] }
